--- a/umbvrella/index.html
+++ b/umbvrella/index.html
@@ -9,7 +9,7 @@ title: Home
   </h1>
 
   <div style="margin: 0 auto;">
-    <img src="/assets/images/people/technology.png" width="500" style="margin-bottom: 50px;" />
+    <img src="{{site.url}}/assets/images/people/technology.png" width="500" style="margin-bottom: 50px;" />
   </div>
 
 </section>
@@ -21,12 +21,12 @@ title: Home
 
   <div>
     <div style="margin: 0 auto;">
-      <img src="/assets/images/people/forskar.jpg" width="500" />
+      <img src="{{site.url}}/assets/images/people/forskar.jpg" width="500" />
       <p style="margin-bottom: 60px;">ForskarFreidag gave us inital feedback on general speed of the game, the environment, response time and gamification.</p>
     </div>
 
     <div style="margin: 0 auto;">
-      <img src="/assets/images/people/missionix.jpg" width="500" />
+      <img src="{{site.url}}/assets/images/people/missionix.jpg" width="500" />
       <p style="margin-bottom: 60px;">With all the suggestions we got in ForskarFreidag, the game with the new levels added was well received at Mission IX.</p>
 
     </div>
