Adds Nilays correct name, Maiky's correct name and nilays part.

--- a/umbvrella/index.html
+++ b/umbvrella/index.html
@@ -16,18 +16,18 @@ title: Umbvrella
 
 <section style="text-align: center;">
   <h1 style="margin-bottom: 50px;">
-    Forskarfreidag and Mission IX
+    Forskarfredag and Mission IX
   </h1>
 
   <div>
     <div style="margin: 0 auto;">
       <img src="{{site.url}}/assets/images/people/forskar.jpg" width="500" />
-      <p style="margin-bottom: 60px;">ForskarFreidag gave us inital feedback on general speed of the game, the environment, response time and gamification.</p>
+      <p style="margin-bottom: 60px;">ForskarFredag gave us inital feedback on general speed of the game, the environment, response time and gamification.</p>
     </div>
 
     <div style="margin: 0 auto;">
       <img src="{{site.url}}/assets/images/people/missionix.jpg" width="500" />
-      <p style="margin-bottom: 60px;">With all the suggestions we got in ForskarFreidag, the game with the new levels added was well received at Mission IX.</p>
+      <p style="margin-bottom: 60px;">With all the suggestions we got in ForskarFredag, the game with the new levels added was well received at Mission IX.</p>
 
     </div>
   </div>
